--- a/styles/aboutPageStyle.css
+++ b/styles/aboutPageStyle.css
@@ -10,6 +10,9 @@ body {
 	padding-left: 2.275%;
 	padding-right: 2.275%;
 }
+group {
+	display: flex;
+}
 /* Header */
 header {
 	text-align: center;
