--- a/styles/aboutPageStyle.css
+++ b/styles/aboutPageStyle.css
@@ -1,16 +1,17 @@
 @charset "utf-8";
 /* Global Styles */
-
+@font-face {
+	font-family: 'Montserrat';
+	src: 'font/Montserrat-Regular-8.otf';
+}
 
 body {
 	margin-left: auto;
 	margin-right: auto;
 	width: 92%;
-	max-width: 960px;
-	/* padding-left: 2.275%;
-	padding-right: 2.275%; */
-	padding-left: 0%;
-	padding-right: 0%;
+	max-width: 980px;
+	padding-left: 2.275%;
+	padding-right: 2.275%;
 }
 group {
 	display: flex;
