--- a/styles/aboutPageStyle.css
+++ b/styles/aboutPageStyle.css
@@ -117,13 +117,13 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
 .section2 .sectionContentTitle {
 	font-family: 'Montserrat', sans-serif;
 	color: rgba(146,146,146,1.00);
-	font-size: 16px;
+	font-size: 13px;
 	font-weight: 700;
 }
 .section2 .sectionContentSubTitle {
 	font-family: 'Montserrat', sans-serif;
 	color: rgba(68,67,67,1.00);
-	font-size: 13px;
+	font-size: 11px;
 	font-weight: 400;
 }
 .section2 p {
@@ -172,13 +172,13 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
     background-color: rgba(153,153,153,1.00);
 }
 .externalResourcesNav .dropdown span {
-	font-size: 11pt;
+	font-size: 9pt;
 }
 
 .externalResourcesNav .dropdown a {
 	font-family: 'Montserrat', sans-serif;
 	color: rgba(255,255,255,1.00);
-	font-size: 14px;
+	font-size: 12px;
 	font-weight: 400;
 	text-decoration: none;
 }
@@ -186,11 +186,11 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
   display: none;
   font-family: 'Montserrat', sans-serif;
   position: absolute;
-  background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  background-color: #ffffff;
+  box-shadow: 0px 8px 16px 0px rgba(6, 6, 6, 0.2);
   padding: 12px 16px;
   z-index: 1;
-  max-width: 45%;
+  max-width: 40%;
   color: rgba(0,0,0,1.00);
 }
 .mainContent .externalResourcesNav .dropdown:hover .dropdown-content {
